discord_themes/addons/SourrR34_PlatformIndicatorSupport.css
/*
  Discord Default
  > Online - #23A55A
  > Idle - #F0B232
  > Do not disturb - #F23F43

  ClearVision Default
  > Online - #43B581
  > Idle - #FAA61A
  > Do not disturb - #982929

  If you are NOT using CV but still have custom status colors, add the following to your theme file: 
  :root{
    --online-color: your online color;
    --idle-color: your idle color;
    --dnd-color: your dnd color;
  }

  Note: although I am not affiliated with ClearVision in any way, this is made to be compatible with any ClearVision
*/

.PI-indicatorContainer > div[aria-label*="Online" i] > svg {
  color: var(--online-color) !important;
}
.PI-indicatorContainer > [aria-label*="Idle" i] > svg {
  color: var(--idle-color) !important;
}
.PI-indicatorContainer > [aria-label*="Do Not Disturb" i] > svg {
  color: var(--dnd-color) !important;
}
.vc-platform-indicator [fill*="var(--green-360"],
.platform-indicators [aria-label*="Online" i] svg{
  fill: var(--online-color) !important;
}
.vc-platform-indicator [fill*="var(--yellow-300"],
.platform-indicators [aria-label*="Idle" i] svg{
  fill: var(--idle-color) !important;
}
.vc-platform-indicator [fill*="var(--red-400"],
.platform-indicators [aria-label*="Dnd" i] svg{
  fill: var(--dnd-color) !important;
}

